--- a/sobre.html
+++ b/sobre.html
@@ -6,11 +6,11 @@
         <title>
             Phelipe's Coffee Shop
         </title>
-        <link rel="stylesheet" href="style - contato.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <h1> Phelipe's Coffee Shop </h1>
+            <h1> <a href="index.html"> Phelipe's Coffee Shop</a> </h1>
         </header>
         <nav>
             <a href="produto.html"> Produtos </a>
